fix header container z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header__container {
   max-width: $maxWidthContainer;
   margin: 0 auto;
-  z-index: 1000;
+  z-index: 450;
   position: relative;
 
   @media screen and (max-width: 1293px) {
